--- a/index.html
+++ b/index.html
@@ -45,15 +45,11 @@
           20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и описали некоторые интересные
           места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11
-            </li>
-          <li>Объектов природного наследия ЮНЕСКО 12
-          </li>
-          <li>Объектов культурного наследия ЮНЕСКО 16
-          </li>
-          <li>Природных заповедников 105
-          </li>
-          <li>Аэропортов 241</li>
+          <li><span class="intro__list-item">Часовых поясов</span> 11</li>
+          <li><span class="intro__list-item">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li><span class="intro__list-item">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__list-item">Природных заповедников</span> 105</li>
+          <li><span class="intro__list-item">Аэропортов</span> 241</li>
         </ul>
       </section>
 
@@ -105,7 +101,8 @@
 
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                target="_blank">National Geographic</a>
               </div>
             </div>
             <div class="plase__2">
@@ -113,7 +110,7 @@
 
               <div class="place__paragraphs">
                 <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом.
-                  Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,&nbsp;а&nbsp;на&nbsp;
+                  Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,&nbsp;а&nbsp;на
                   север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                 <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                   историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo;
