--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <section class="lead">
 
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-        <p class="lead__subtitle">
-          Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
         <div class="lead__box">
           <img class="lead__image" src="./images/lead-polka.jpg"
           alt="маршрут движения поезда от пскова до улан-удэ на фоне спящей девушки в вагоне поезда">
@@ -71,15 +70,13 @@
       <section class="plases" aria-label="фотографии и описания красивых мест">
         <ul class="plases__container">
           <li class="plase">
-            <div class="plase__1">
               <h2 class="plase__title">Куршская коса</h2>
 
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
               </div>
-            </div>
-            <div class="plase__2">
+
               <img class="plase__image" src="./images/place-kosa.jpg" alt="прозрачная вода Куршского залива на фоне пней сгнивших деревьев">
 
               <div class="place__paragraphs">
@@ -93,10 +90,10 @@
                   россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
                   в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
               </div>
-            </div>
+
           </li>
           <li class="plase">
-            <div class="plase__1">
+
               <h2 class="plase__title">Кольский</h2>
 
               <div class="plase__website">
@@ -104,8 +101,7 @@
                 <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 target="_blank">National Geographic</a>
               </div>
-            </div>
-            <div class="plase__2">
+
               <img class="plase__image" src="./images/place-kolsky.jpg" alt="изображение горной гряды под снегом">
 
               <div class="place__paragraphs">
@@ -119,20 +115,18 @@
                   а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное
                   сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
               </div>
-            </div>
+
           </li>
           <li class="plase">
-            <div class="plase__1">
+
               <h2 class="plase__title">Алтай</h2>
 
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
-                <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ
-                " target="_blank">YouTube
+                <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
                 </a>
               </div>
-            </div>
-            <div class="plase__2">
+
               <img class="plase__image" src="./images/place-altai.jpg" alt="изображение раскрытого ноутбука на фоне шикарной зелени Алтая">
 
               <div class="place__paragraphs">
@@ -145,18 +139,18 @@
                   бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
                   манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
               </div>
-            </div>
+
           </li>
           <li class="plase">
-            <div class="plase__1">
+
               <h2 class="plase__title">Зимний Байкал</h2>
 
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
               </div>
-            </div>
-            <div class="plase__2">
+
+
               <img class="plase__image" src="./images/place-winter-baikal.jpg" alt="фото льда Байкала">
 
               <div class="place__paragraphs">
@@ -167,18 +161,18 @@
                   старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на фестивале
                   &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
               </div>
-            </div>
+
           </li>
           <li class="plase">
-            <div class="plase__1">
+
               <h2 class="plase__title">Карелия</h2>
 
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
               </div>
-            </div>
-            <div class="plase__2">
+
+
               <img class="plase__image" src="./images/place-karelia.jpg" alt="многослойная фотография реки в окружении прекрасной природы Карелии">
 
               <div class="place__paragraphs">
@@ -190,7 +184,7 @@
                   километров не встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров
                   от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
               </div>
-            </div>
+
           </li>
         </ul>
       </section>
