--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="page">
 
-    <header class="header">
+    <header class="header indent">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
         <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
@@ -44,41 +44,38 @@
           20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и описали некоторые интересные
           места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><span class="intro__list-item">Часовых поясов</span> 11</li>
-          <li><span class="intro__list-item">Объектов природного наследия ЮНЕСКО</span> 12</li>
-          <li><span class="intro__list-item">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-          <li><span class="intro__list-item">Природных заповедников</span> 105</li>
-          <li><span class="intro__list-item">Аэропортов</span> 241</li>
+          <li><p class="intro__list-item"><span class="intro__list-large">Часовых поясов</span> 11</p></li>
+          <li><p class="intro__list-item"><span class="intro__list-large">Объектов природного наследия ЮНЕСКО</span> 12</p></li>
+          <li><p class="intro__list-item"><span class="intro__list-large">Объектов культурного наследия ЮНЕСКО</span> 16</p></li>
+          <li><p class="intro__list-item"><span class="intro__list-large">Природных заповедников</span> 105</p></li>
+          <li><p class="intro__list-item"><span class="intro__list-large">Аэропортов</span> 241</p></li>
         </ul>
       </section>
 
-      <section class="photo-grid" aria-label="галерея фотографий нашей страны">
-        <img src="./images/photo-grid-train.jpg" alt="красивый вид из окна движущегося поезда" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на облака и гору" class="photo-grid__item">
-        <img src="./images/photo-grid-tuman.jpg" alt="фото вока, стоящего на снопе сена" class="photo-grid__item">
-        <img src="./images/photo-grid-sochi.jpg" alt="изображение леса в дымке тумана" class="photo-grid__item">
-        <img src="./images/photo-grid-arisa.jpg" alt="фотография крупным планом колеса машины на льду Байкала" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal.jpg" alt="изображение пляжа на фоне горы" class="photo-grid__item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="атмосферный вид на Эльбрус" class="photo-grid__item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="знак пешеходног перехода на фоне волнорезов-тетраподов" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="вид сверху на сопки" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="прекрасный вид на гору" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt="вид сверху на крутые склоны Байкала" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="красивый горный пейзаж в дымке тумана" class="photo-grid__item">
+      <section class="photo-grid indent" aria-label="галерея фотографий нашей страны">
+        <img  class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="красивый вид из окна движущегося поезда">
+        <img  class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на облака и гору">
+        <img  class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото вока, стоящего на снопе сена">
+        <img  class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="изображение леса в дымке тумана">
+        <img  class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фотография крупным планом колеса машины на льду Байкала">
+        <img  class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="изображение пляжа на фоне горы">
+        <img  class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="атмосферный вид на Эльбрус">
+        <img  class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак пешеходног перехода на фоне волнорезов-тетраподов">
+        <img  class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="вид сверху на сопки">
+        <img  class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="прекрасный вид на гору">
+        <img  class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид сверху на крутые склоны Байкала">
+        <img  class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="красивый горный пейзаж в дымке тумана">
       </section>
 
       <section class="plases" aria-label="фотографии и описания красивых мест">
         <ul class="plases__container">
           <li class="plase">
               <h2 class="plase__title">Куршская коса</h2>
-
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
               </div>
-
               <img class="plase__image" src="./images/place-kosa.jpg" alt="прозрачная вода Куршского залива на фоне пней сгнивших деревьев">
-
               <div class="place__paragraphs">
                 <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете
                   увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной
@@ -93,17 +90,13 @@
 
           </li>
           <li class="plase">
-
               <h2 class="plase__title">Кольский</h2>
-
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 target="_blank">National Geographic</a>
               </div>
-
               <img class="plase__image" src="./images/place-kolsky.jpg" alt="изображение горной гряды под снегом">
-
               <div class="place__paragraphs">
                 <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом.
                   Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,&nbsp;а&nbsp;на
@@ -118,17 +111,13 @@
 
           </li>
           <li class="plase">
-
               <h2 class="plase__title">Алтай</h2>
-
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
                 </a>
               </div>
-
               <img class="plase__image" src="./images/place-altai.jpg" alt="изображение раскрытого ноутбука на фоне шикарной зелени Алтая">
-
               <div class="place__paragraphs">
                 <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
                   В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные
@@ -139,20 +128,14 @@
                   бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
                   манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
               </div>
-
           </li>
           <li class="plase">
-
               <h2 class="plase__title">Зимний Байкал</h2>
-
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
               </div>
-
-
               <img class="plase__image" src="./images/place-winter-baikal.jpg" alt="фото льда Байкала">
-
               <div class="place__paragraphs">
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире.&nbsp;Многие также знают,
                   что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
@@ -164,17 +147,12 @@
 
           </li>
           <li class="plase">
-
               <h2 class="plase__title">Карелия</h2>
-
               <div class="plase__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
               </div>
-
-
               <img class="plase__image" src="./images/place-karelia.jpg" alt="многослойная фотография реки в окружении прекрасной природы Карелии">
-
               <div class="place__paragraphs">
                 <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
                   тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
@@ -184,7 +162,6 @@
                   километров не встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров
                   от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
               </div>
-
           </li>
         </ul>
       </section>
@@ -199,14 +176,14 @@
 
     </main>
 
-      <footer class="footer">
+      <footer class="footer indent">
         <nav>
           <ul class="footer__menu">
-            <li class=""><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
-            <li class=""><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
-            <li class=""><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
-            <li class=""><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
-            <li class=""><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
+            <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
           </ul>
         </nav>
         <p class="footer__copyright">&copy; 2023. Юлия Ксенофонтова</p>
