--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                   север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                 <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                   историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo;
-                  не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
-                  вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной,
-                  а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное
+                  не осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
+                  вы&nbsp;не интересовались пронизывающей земную кору сверхглубокой скважиной,
+                  а&nbsp;от&nbsp;апатитов ва&nbsp;давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное
                   сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
               </div>
 
@@ -170,8 +170,7 @@
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы
-          до Байкала на электричках.</p>
-        </a>
+          до Байкала на электричках.</p></a>
       </section>
 
     </main>
