--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и описали некоторые интересные
           места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><p class="intro__list-item"><span class="intro__list-large">Часовых поясов</span> 11</p></li>
-          <li><p class="intro__list-item"><span class="intro__list-large">Объектов природного наследия ЮНЕСКО</span> 12</p></li>
-          <li><p class="intro__list-item"><span class="intro__list-large">Объектов культурного наследия ЮНЕСКО</span> 16</p></li>
-          <li><p class="intro__list-item"><span class="intro__list-large">Природных заповедников</span> 105</p></li>
-          <li><p class="intro__list-item"><span class="intro__list-large">Аэропортов</span> 241</p></li>
+          <li class="intro__list-item"><span class="intro__list-large">Часовых поясов</span> 11</li>
+          <li class="intro__list-item"><span class="intro__list-large">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li class="intro__list-item"><span class="intro__list-large">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li class="intro__list-item"><span class="intro__list-large">Природных заповедников</span> 105</li>
+          <li class="intro__list-item"><span class="intro__list-large">Аэропортов</span> 241</li>
         </ul>
       </section>
 
@@ -77,13 +77,13 @@
               </div>
               <img class="plase__image" src="./images/place-kosa.jpg" alt="прозрачная вода Куршского залива на фоне пней сгнивших деревьев">
               <div class="place__paragraphs">
-                <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете
-                  увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной
+                <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы сможете
+                  увидеть два водных горизонта&nbsp;— спокойного Куршского залива с&nbsp;одной
                   стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
                   природная зона на&nbsp;краю российского анклава.</p>
-                <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
-                  Для путешественника и&nbsp;исследователя там&nbsp;же по соседству&nbsp;&mdash;
-                  самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие
+                <p class="place__paragraph">На&nbsp;этом Калининградская область не заканчивается.
+                  Для путешественника и&nbsp;исследователя там&nbsp;же по соседству&nbsp;—
+                  самая западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
                   россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
                   в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
               </div>
@@ -99,13 +99,13 @@
               <img class="plase__image" src="./images/place-kolsky.jpg" alt="изображение горной гряды под снегом">
               <div class="place__paragraphs">
                 <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом.
-                  Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,&nbsp;а&nbsp;на
-                  север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                  Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;— тайга,&nbsp;а&nbsp;на
+                  север&nbsp;— Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                 <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                   историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo;
                   не осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
                   вы&nbsp;не интересовались пронизывающей земную кору сверхглубокой скважиной,
-                  а&nbsp;от&nbsp;апатитов ва&nbsp;давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное
+                  а&nbsp;от&nbsp;апатитов вас&nbsp;давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное
                   сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
               </div>
 
@@ -119,14 +119,14 @@
               </div>
               <img class="plase__image" src="./images/place-altai.jpg" alt="изображение раскрытого ноутбука на фоне шикарной зелени Алтая">
               <div class="place__paragraphs">
-                <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+                <p class="place__paragraph">Алтай&nbsp;— одно из&nbsp;красивейших мест в&nbsp;России.
                   В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные
                   соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна,
-                  сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+                  сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;— горным воздухом.</p>
                 <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
                   летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая
                   бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
-                  манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
+                  манулы&nbsp;— тоже обитатели Алтайского края.</p>
               </div>
           </li>
           <li class="plase">
@@ -140,9 +140,9 @@
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире.&nbsp;Многие также знают,
                   что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
                 <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
-                  по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
+                  по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и&nbsp;тандем
                   старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на фестивале
-                  &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
+                  &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;— 197.011&nbsp;км/ч.</p>
               </div>
 
           </li>
@@ -155,11 +155,11 @@
               <img class="plase__image" src="./images/place-karelia.jpg" alt="многослойная фотография реки в окружении прекрасной природы Карелии">
               <div class="place__paragraphs">
                 <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
-                  тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
-                  на 30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот
-                  никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
-                  существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню
-                  километров не встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров
+                  тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает
+                  на 30&nbsp;метров&nbsp;— леса карельских национальных парков из-за непроходимых болот
+                  никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+                  существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на сотню
+                  километров не встретишь тропы. А&nbsp;на редких тропинках деревья в&nbsp;паре метров
                   от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
               </div>
           </li>
@@ -168,9 +168,9 @@
 
       <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы
-          до Байкала на электричках.</p></a>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе — путешествие от&nbsp;столицы
+            до&nbsp;Байкала на&nbsp;электричках.</p></a>
       </section>
 
     </main>
