--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
 
     <header class="header indent">
-      <div class="header__logo"></div>
+      <img class="header__logo" src="./images/header-logo.svg" alt="логотип с изображением контура нашей страны с надписью Россия">
       <ul class="header__lang-links">
         <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
         <li><a href="#" class="header__lang-link">En</a></li>
@@ -81,8 +81,8 @@
                   увидеть два водных горизонта&nbsp;— спокойного Куршского залива с&nbsp;одной
                   стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
                   природная зона на&nbsp;краю российского анклава.</p>
-                <p class="place__paragraph">На&nbsp;этом Калининградская область не заканчивается.
-                  Для путешественника и&nbsp;исследователя там&nbsp;же по соседству&nbsp;—
+                <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+                  Для путешественника и&nbsp;исследователя там&nbsp;же по соседству —
                   самая западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
                   россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
                   в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
@@ -121,7 +121,7 @@
               <div class="place__paragraphs">
                 <p class="place__paragraph">Алтай&nbsp;— одно из&nbsp;красивейших мест в&nbsp;России.
                   В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные
-                  соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна,
+                  соснами, горные реки и&nbsp;озёра. А если вы&nbsp;откроете в&nbsp;автомобиле окна,
                   сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;— горным воздухом.</p>
                 <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
                   летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая
