--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="header indent">
       <img class="header__logo" src="./images/header-logo.svg" alt="логотип с изображением контура нашей страны с надписью Россия">
       <ul class="header__lang-links">
-        <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
-        <li><a href="#" class="header__lang-link">En</a></li>
+        <li><a href="#" class="header__lang-link header__lang-link_active link">Ru</a></li>
+        <li><a href="#" class="header__lang-link link">En</a></li>
       </ul>
     </header>
 
@@ -178,11 +178,11 @@
       <footer class="footer indent">
         <nav>
           <ul class="footer__menu">
-            <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-            <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+            <li><a class="footer__link link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li><a class="footer__link link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li><a class="footer__link link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li><a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li><a class="footer__link link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
           </ul>
         </nav>
         <p class="footer__copyright">&copy; 2023. Юлия Ксенофонтова</p>
