--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
       </section>
 
       <section class="photo-grid indent" aria-label="галерея фотографий нашей страны">
-        <img  class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="красивый вид из окна движущегося поезда">
-        <img  class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на облака и гору">
-        <img  class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото вока, стоящего на снопе сена">
-        <img  class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="изображение леса в дымке тумана">
-        <img  class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фотография крупным планом колеса машины на льду Байкала">
-        <img  class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="изображение пляжа на фоне горы">
-        <img  class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="атмосферный вид на Эльбрус">
-        <img  class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак пешеходног перехода на фоне волнорезов-тетраподов">
-        <img  class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="вид сверху на сопки">
-        <img  class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="прекрасный вид на гору">
-        <img  class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид сверху на крутые склоны Байкала">
-        <img  class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="красивый горный пейзаж в дымке тумана">
+        <ul class="photo-grid__items">
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="красивый вид из окна движущегося поезда"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на облака и гору"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото вока, стоящего на снопе сена"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="изображение леса в дымке тумана"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фотография крупным планом колеса машины на льду Байкала"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="изображение пляжа на фоне горы"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="атмосферный вид на Эльбрус"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак пешеходног перехода на фоне волнорезов-тетраподов"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="вид сверху на сопки"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="прекрасный вид на гору"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид сверху на крутые склоны Байкала"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="красивый горный пейзаж в дымке тумана"></li>
+      </ul>
       </section>
 
       <section class="plases" aria-label="фотографии и описания красивых мест">
@@ -169,8 +171,7 @@
       <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе — путешествие от&nbsp;столицы
-            до&nbsp;Байкала на&nbsp;электричках.</p></a>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p></a>
       </section>
 
     </main>
