--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
 
       <section class="photo-grid indent" aria-label="галерея фотографий нашей страны">
         <ul class="photo-grid__items">
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="красивый вид из окна движущегося поезда"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="вид сверху на облака и гору"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото вока, стоящего на снопе сена"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="изображение леса в дымке тумана"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фотография крупным планом колеса машины на льду Байкала"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="изображение пляжа на фоне горы"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="атмосферный вид на Эльбрус"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="знак пешеходног перехода на фоне волнорезов-тетраподов"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="вид сверху на сопки"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="прекрасный вид на гору"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид сверху на крутые склоны Байкала"></li>
-          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="красивый горный пейзаж в дымке тумана"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-train.png" alt="красивый вид из окна движущегося поезда"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.png" alt="вид сверху на облака и гору"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-tuman.png" alt="фото вока, стоящего на снопе сена"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-sochi.png" alt="изображение леса в дымке тумана"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-arisa.png" alt="фотография крупным планом колеса машины на льду Байкала"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal.png" alt="изображение пляжа на фоне горы"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-elbrus.png" alt="атмосферный вид на Эльбрус"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kondratiev.png" alt="знак пешеходног перехода на фоне волнорезов-тетраподов"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-1.png" alt="вид сверху на сопки"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-kamchatka-2.png" alt="прекрасный вид на гору"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-baikal-2.png" alt="вид сверху на крутые склоны Байкала"></li>
+          <li class="photo-grid__it"><img  class="photo-grid__item" src="./images/photo-grid-ergaki.png" alt="красивый горный пейзаж в дымке тумана"></li>
       </ul>
       </section>
 
@@ -84,7 +84,7 @@
                   стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
                   природная зона на&nbsp;краю российского анклава.</p>
                 <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
-                  Для путешественника и&nbsp;исследователя там&nbsp;же по соседству —
+                  Для путешественника и&nbsp;исследователя&nbsp;там&nbsp;же по соседству —
                   самая западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
                   россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
                   в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
