--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2 class="plase__title">Куршская коса</h2>
                 <div class="plase__website">
                   <p class="place__url-heading">URL</p>
-                  <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                  <a class="place__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img class="plase__image" src="./images/place-kosa.jpg" alt="прозрачная вода Куршского залива на фоне пней сгнивших деревьев">
                 <div class="place__paragraphs">
@@ -94,7 +94,7 @@
                 <h2 class="plase__title">Кольский</h2>
                 <div class="plase__website">
                   <p class="place__url-heading">URL</p>
-                  <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                  <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                   target="_blank">National Geographic</a>
                 </div>
                 <img class="plase__image" src="./images/place-kolsky.jpg" alt="изображение горной гряды под снегом">
@@ -114,7 +114,7 @@
                 <h2 class="plase__title">Алтай</h2>
                 <div class="plase__website">
                   <p class="place__url-heading">URL</p>
-                  <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
+                  <a class="place__link link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
                   </a>
                 </div>
               <img class="plase__image" src="./images/place-altai.jpg" alt="изображение раскрытого ноутбука на фоне шикарной зелени Алтая">
@@ -133,7 +133,7 @@
                 <h2 class="plase__title">Зимний Байкал</h2>
                 <div class="plase__website">
                   <p class="place__url-heading">URL</p>
-                  <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                  <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img class="plase__image" src="./images/place-winter-baikal.jpg" alt="фото льда Байкала">
                 <div class="place__paragraphs">
