на проверку испр3

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
 
         <section class="plases" aria-label="фотографии и описания красивых мест">
-          <ul class="plases__container">
+          <ul class="plases-container">
             <li class="plase">
                 <h2 class="plase__title">Куршская коса</h2>
                 <div class="plase__website">
