на проверку испр3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section class="lead">
           <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-          <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а&nbsp;здесь.</p>
           <div class="lead__box">
             <img class="lead__image" src="./images/lead-polka.jpg"
             alt="маршрут движения поезда от пскова до улан-удэ на фоне спящей девушки в вагоне поезда">
@@ -69,20 +69,20 @@
         </section>
 
         <section class="plases" aria-label="фотографии и описания красивых мест">
-          <ul class="plases-container">
+          <ul class="plases__container">
             <li class="plase">
                 <h2 class="plase__title">Куршская коса</h2>
                 <div class="plase__website">
-                  <p class="place__url-heading">URL</p>
-                  <a class="place__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                  <p class="plase__url-heading">URL</p>
+                  <a class="plase__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img class="plase__image" src="./images/place-kosa.jpg" alt="прозрачная вода Куршского залива на фоне пней сгнивших деревьев">
-                <div class="place__paragraphs">
-                  <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы сможете
+                <div class="plase__paragraphs">
+                  <p class="plase__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы сможете
                     увидеть два водных горизонта&nbsp;— спокойного Куршского залива с&nbsp;одной
                     стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
                     природная зона на&nbsp;краю российского анклава.</p>
-                  <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+                  <p class="plase__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
                     Для путешественника и&nbsp;исследователя&nbsp;там&nbsp;же по соседству —
                     самая западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
                     россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная
@@ -92,16 +92,16 @@
             <li class="plase">
                 <h2 class="plase__title">Кольский</h2>
                 <div class="plase__website">
-                  <p class="place__url-heading">URL</p>
-                  <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                  <p class="plase__url-heading">URL</p>
+                  <a class="plase__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                   target="_blank">National Geographic</a>
                 </div>
                 <img class="plase__image" src="./images/place-kolsky.jpg" alt="изображение горной гряды под снегом">
-                <div class="place__paragraphs">
-                  <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом.
+                <div class="plase__paragraphs">
+                  <p class="plase__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом.
                     Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;— тайга,&nbsp;а&nbsp;на
                     север&nbsp;— Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                  <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
+                  <p class="plase__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
                     историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo;
                     не осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
                     вы&nbsp;не интересовались пронизывающей земную кору сверхглубокой скважиной,
@@ -112,17 +112,17 @@
             <li class="plase">
                 <h2 class="plase__title">Алтай</h2>
                 <div class="plase__website">
-                  <p class="place__url-heading">URL</p>
-                  <a class="place__link link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
+                  <p class="plase__url-heading">URL</p>
+                  <a class="plase__link link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
                   </a>
                 </div>
               <img class="plase__image" src="./images/place-altai.jpg" alt="изображение раскрытого ноутбука на фоне шикарной зелени Алтая">
-                <div class="place__paragraphs">
-                  <p class="place__paragraph">Алтай&nbsp;— одно из&nbsp;красивейших мест в&nbsp;России.
+                <div class="plase__paragraphs">
+                  <p class="plase__paragraph">Алтай&nbsp;— одно из&nbsp;красивейших мест в&nbsp;России.
                     В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные
                     соснами, горные реки и&nbsp;озёра. А если вы&nbsp;откроете в&nbsp;автомобиле окна,
                     сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;— горным воздухом.</p>
-                  <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
+                  <p class="plase__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
                     летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая
                     бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
                     манулы&nbsp;— тоже обитатели Алтайского края.</p>
@@ -131,14 +131,14 @@
             <li class="plase">
                 <h2 class="plase__title">Зимний Байкал</h2>
                 <div class="plase__website">
-                  <p class="place__url-heading">URL</p>
-                  <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                  <p class="plase__url-heading">URL</p>
+                  <a class="plase__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img class="plase__image" src="./images/place-winter-baikal.jpg" alt="фото льда Байкала">
-                <div class="place__paragraphs">
-                  <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире.&nbsp;Многие также знают,
+                <div class="plase__paragraphs">
+                  <p class="plase__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире.&nbsp;Многие также знают,
                     что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
-                  <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
+                  <p class="plase__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
                     по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и&nbsp;тандем
                     старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на фестивале
                     &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;— 197.011&nbsp;км/ч.</p>
@@ -147,13 +147,13 @@
             <li class="plase">
                 <h2 class="plase__title">Карелия</h2>
                 <div class="plase__website">
-                  <p class="place__url-heading">URL</p>
-                  <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                  <p class="plase__url-heading">URL</p>
+                  <a class="plase__link  link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <img class="plase__image" src="./images/place-karelia.jpg" alt="многослойная фотография реки в
                   окружении прекрасной природы Карелии">
-                <div class="place__paragraphs">
-                  <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
+                <div class="plase__paragraphs">
+                  <p class="plase__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
                     тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает
                     на 30&nbsp;метров&nbsp;— леса карельских национальных парков из-за непроходимых болот
                     никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
